--- a/hack/deploy/rbac-list.yaml
+++ b/hack/deploy/rbac-list.yaml
@@ -12,7 +12,7 @@ rules:
   verbs:
   - "*"
 - apiGroups:
-  - messenger.appscode.com
+  - messenger.kubeware.io
   resources: ["*"]
   verbs: ["*"]
 - apiGroups:
