--- a/hack/deploy/user-roles.yaml
+++ b/hack/deploy/user-roles.yaml
@@ -7,7 +7,7 @@ metadata:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
 rules:
 - apiGroups:
-  - messenger.appscode.com
+  - messenger.kubeware.io
   resources:
   - notifiers
   verbs:
@@ -28,7 +28,7 @@ metadata:
     rbac.authorization.k8s.io/aggregate-to-view: "true"
 rules:
 - apiGroups:
-  - messenger.appscode.com
+  - messenger.kubeware.io
   resources:
   - notifiers
   verbs:
