--- a/hack/dev/notification-for-hipchat.yaml
+++ b/hack/dev/notification-for-hipchat.yaml
@@ -1,7 +1,7 @@
 apiVersion: messenger.kubeware.io/v1alpha1
 kind: Notification
 metadata:
- generateName: notify-hipchat
+ generateName: notify-hipchat-
 #ref:
 # kind: ClusterMessengerService
 # name: email-notifier
