Change CRD obj name and Add Garbage Collect

--- a/hack/dev/demo-messaging-service-for-hipchat.yaml
+++ b/hack/dev/demo-messaging-service-for-hipchat.yaml
@@ -1,9 +1,11 @@
 apiVersion: messenger.kubeware.io/v1alpha1
-kind: Notifier
+#kind: Notifier
+kind: MessagingService
 metadata:
   name: hipchat-ops-room
 spec:
-  notifier: hipchat
+  drive: hipchat
+#  notifier: hipchat
   to:
   - ops-alerts
   credentialSecretName: notifier-config
