--- a/hack/dev/apiregistration.yaml
+++ b/hack/dev/apiregistration.yaml
@@ -46,18 +46,18 @@ spec:
   version: v1alpha1
 ---
 # register as aggregated apiserver
-apiVersion: apiregistration.k8s.io/v1beta1
-kind: APIService
-metadata:
-  name: v1alpha1.repositories.messenger.kubeware.io
-  labels:
-    app: test-messenger
-spec:
-  insecureSkipTLSVerify: true
-  group: repositories.messenger.kubeware.io
-  groupPriorityMinimum: 1000
-  versionPriority: 15
-  service:
-    name: messenger-local-apiserver
-    namespace: ${MESSENGER_NAMESPACE}
-  version: v1alpha1
+#apiVersion: apiregistration.k8s.io/v1beta1
+#kind: APIService
+#metadata:
+#  name: v1alpha1.repositories.messenger.kubeware.io
+#  labels:
+#    app: test-messenger
+#spec:
+#  insecureSkipTLSVerify: true
+#  group: repositories.messenger.kubeware.io
+#  groupPriorityMinimum: 1000
+#  versionPriority: 15
+#  service:
+#    name: messenger-local-apiserver
+#    namespace: ${MESSENGER_NAMESPACE}
+#  version: v1alpha1
